--- a/CppTestProjectForLearning/CppTestProjectForLearning.vcxproj
+++ b/CppTestProjectForLearning/CppTestProjectForLearning.vcxproj
@@ -124,6 +124,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CppTestProjectForLearning.cpp" />
+    <ClCompile Include="io.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="io.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
